# lothbrok

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  renovate.json  requirements.txt  routes.py
.github/workflows/: black.yaml  cicd.yaml  test.yaml
flask/: flask.py
lothbrok/: main.py  routes.py
tests/: test_lothbrok.py
